kubernetes/apps/networking/caddy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  selector:
    app: caddy
  ports:
    - port: 80
      targetPort: http
      name: http
