kubernetes/apps/networking/caddy/app/httproute-nas.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nas
spec:
  hostnames:
    - nas.ringbell.cc
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: caddy
          port: 80
