kubernetes/apps/networking/caddy/app/httproute-proxmox.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox
spec:
  hostnames:
    - proxmox.ringbell.cc
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: caddy
          port: 80
